# hyperreal

./: AGENTS.md  ALGORITHM_PARITY.md  Cargo.toml  PERFORMANCE.md  README.md  benchmarks.md  dispatch_trace.md  evaluator-refactor.md  promoted_slow_offenders.txt  slow_performers.txt  structural_facts.txt
.github/workflows/: ci.yml
benches/: adversarial_library.rs  adversarial_transcendentals.rs  angle_conversion.rs  borrowed_ops.rs  dispatch_trace.rs  float_convert.rs  gmp_api.rs  library_perf.rs  numerical_micro.rs  scalar_micro.rs
benches/support/: bench_docs.rs
examples/: computable_graphs.rs  computable_refinement_steps.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: computable_approximation.rs  rational_arithmetic.rs  real_elementary.rs  real_exact.rs
proptest-regressions/real/: convert.txt
src/: README.md  computable.rs  dispatch_trace.rs  lib.rs  main.rs  problem.rs  rational.rs  real.rs  serde.rs  simple.rs  structural.rs  trace.rs
src/computable/: README.md  approximation.rs  constants.rs  format.rs  mod.rs  node.rs  symbolic.rs
src/computable/approximation/: arithmetic_kernels.rs  constants.rs  dispatch.rs  exp_sqrt.rs  inverse_hyperbolic.rs  inverse_trig.rs  logarithms.rs  representation.rs  statistics.rs  trig.rs
src/computable/node/: algebra.rs  approximation_queries.rs  bounds.rs  exp_trig.rs  logarithms.rs  primitive_constructors.rs  representation.rs  roots_inverse_hyperbolic.rs  scale.rs  structural_analysis.rs  tests.rs
src/rational/: README.md  arithmetic.rs  convert.rs  mod.rs  parse.rs
src/rational/arithmetic/: aggregate_products.rs  algorithm_dispatch.rs  as_ref.rs  barrett_division.rs  comparison.rs  construction.rs  format_parse.rs  ntt_multiplication.rs  ops.rs  queries_conversion.rs  representation.rs  squares_powers.rs  tests.rs  toom4_multiplication.rs  toom6_multiplication.rs  toom8_multiplication.rs
src/real/: README.md  approximation.rs  arithmetic.rs  constructors.rs  convert.rs  exact_set.rs  facts.rs  linear_combination.rs  mod.rs  normal_reference.rs  test.rs  tests.rs
src/real/arithmetic/: add_sub.rs  canonical_constants.rs  classification.rs  comparison.rs  elementary_functions.rs  facts.rs  format_parse.rs  inversion.rs  linear_algebra.rs  mul_div.rs  representation.rs  structural_helpers.rs  tests.rs
tests/: adversarial_props.rs  adversarial_regressions.rs  adversarial_semantics.rs  gmp_api_coverage.rs  numeric_roundtrip_formats.rs  numerical_cross_reference.rs  public_numeric_semantics.rs  rational_oracle.rs  readme_metadata.rs
