[package]
name = "hyperreal"
description = "Exact rational and computable real arithmetic in Rust"
license = "Apache-2.0"
repository = "https://github.com/timschmidt/hyperreal/"
version = "0.11.1"
edition = "2024"
readme = "README.md"

[features]
default = []
simple = []
# Compile-time opt-in diagnostic hooks for benchmark path tracing. The
# instrumentation macro compiles away unless this feature is enabled.
dispatch-trace = []

[dependencies]
ciborium = "0.2.2"
num = { version = "0.4.3", features = ["num-bigint", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"

[[bin]]
name = "hyperreal"
path = "src/main.rs"
required-features = ["simple"]

[[bench]]
name = "borrowed_ops"
harness = false

[[bench]]
name = "dispatch_trace"
harness = false
required-features = ["dispatch-trace"]

[[bench]]
name = "library_perf"
harness = false
required-features = ["simple"]

[[bench]]
name = "numerical_micro"
harness = false

[[bench]]
name = "float_convert"
harness = false

[[bench]]
name = "scalar_micro"
harness = false

[[bench]]
name = "adversarial_transcendentals"
harness = false

[[bench]]
name = "adversarial_library"
harness = false
