[package]
name = "hyperreal"
description = "Exact rational and computable real arithmetic in Rust"
license = "Apache-2.0"
repository = "https://github.com/timschmidt/hyperreal/"
version = "0.13.1"
edition = "2024"
readme = "README.md"
keywords = ["real", "rational", "arithmetic", "exact", "math"]
categories = ["mathematics", "science", "data-structures"]

[features]
default = []
simple = []
cached-f32-approx = []
cached-f64-approx = []
# Compile-time opt-in diagnostic hooks for benchmark path tracing. The
# instrumentation macro compiles away unless this feature is enabled.
dispatch-trace = []
serde = ["dep:serde", "dep:serde_json", "dep:ciborium", "num/serde"]

[dependencies]
ciborium = { version = "0.2.2", optional = true }
num = { version = "0.4.3", features = ["num-bigint"] }
serde = { version = "1.0.228", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.149", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"
rug = { version = "1.30.0", default-features = false, features = ["float", "rational", "std"] }

[[bin]]
name = "hyperreal"
path = "src/main.rs"
required-features = ["simple"]

[[bench]]
name = "borrowed_ops"
harness = false

[[bench]]
name = "dispatch_trace"
harness = false
required-features = ["dispatch-trace"]

[[bench]]
name = "library_perf"
harness = false
required-features = ["simple"]

[[bench]]
name = "numerical_micro"
harness = false

[[bench]]
name = "float_convert"
harness = false

[[bench]]
name = "scalar_micro"
harness = false

[[bench]]
name = "gmp_api"
harness = false

[[bench]]
name = "adversarial_transcendentals"
harness = false

[[bench]]
name = "adversarial_library"
harness = false
